--- a/style.css
+++ b/style.css
@@ -113,7 +113,6 @@ nav > h4{
 .page2{
     height: 100vh;
     width: 100%;
-    background-color: rebeccapurple;
     position: relative;
 }
 
@@ -247,6 +246,7 @@ nav > h4{
     background-color:#000;;
     padding: 1vw 2.5vw;
     margin-top: -.1vh;
+    padding-bottom: 15vw;
 }
 
 .page4 #highlight{
@@ -426,4 +426,24 @@ nav > h4{
     height: 100%;
     width: 100%;
     object-fit: cover;
-} 
+}
+
+.page5{
+    height: 100vh;
+    width: 100%;
+    background-color: #fff;
+}
+
+.page5-top{
+    height: 45vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 2vw;
+}
+
+.page5-top img{
+    height: 10%;
+    width: 10%;
+}
