--- a/style.css
+++ b/style.css
@@ -429,21 +429,68 @@ nav > h4{
 }
 
 .page5{
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     background-color: #fff;
+    position: relative;
 }
 
 .page5-top{
-    height: 45vh;
+    height: 60vh;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 2vw;
+    padding: 12vh 2vw;
 }
 
 .page5-top img{
     height: 10%;
     width: 10%;
+}
+
+.page5-center{
+    width: 96%;
+    margin-left: 2%;
+    padding: 1.6vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-top: 1px solid #252424a2;
+}
+
+.page5-center h2{
+    font-family: "rejouice";
+    font-weight: 300;
+    font-size: 1.34vw;
+}
+
+.swiper-div{
+    width: 100%;
+    height: 60vh;
+    position: relative;
+}
+
+.swiper{
+    width: 120%;
+    height: 100%;
+}
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 19%;
+    object-fit: cover;
+}
+
+.swiper {
+    margin-left: auto;
+    margin-right: auto;
 }
