--- a/style.css
+++ b/style.css
@@ -480,6 +480,7 @@ nav > h4{
     width: 100%;
     height: 60vh;
     position: relative;
+    cursor:-webkit-grab;
 }
 
 .swiper{
@@ -489,7 +490,6 @@ nav > h4{
 
 .swiper-slide {
     text-align: center;
-    font-size: 18px;
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
@@ -561,8 +561,49 @@ nav > h4{
 .page6-cont{
     height: 120vh;
     width: 100%;
-    /* background-color: darkolivegreen; */
-    scale: .5;
+    scale: .7;
 }
+
+.page6-cont video{
+    height: 100%;
+    width: 100%;
+}
+
+.page7{
+    height: 90vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.page7-center{
+    background-color: red;
+    width: 26.16vw;
+    height: 10vh;
+    position: relative;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+.page7-center h2{
+    font-family: "rejouice";
+    font-size: 4rem;
+}
+
+.page7-center h3{
+    font-family: "rejouice";
+    top: 10vh;
+    font-size: 4rem;
+}
+
+.page7-center:hover h2{
+    margin-top: -10vh;
+    transition: all ease-in-out .5s;
+}
+
+
 
 
