--- a/style.css
+++ b/style.css
@@ -601,11 +601,108 @@ nav > h4{
 }
 
 .page8{
-    height: 100vh;
+    height: 99vh;
     width: 100%;
     background-color: black;
+    color: #fff;
+    padding: 2vw 2.5vw;
 }
 
+.page8-top{
+    height: 37vh;
+    /* background-color: darkgreen; */
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
 
+.top-left{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 2vw;
+    padding: 2vw 0vw;
+}
 
+.top-left h1{
+    font-family: "rejouice";
+    font-size: 2.55rem;
+    margin-bottom: 2vw;
+}
 
+.left-botom h3{
+    font-size: .95rem;
+}
+
+input {
+  position: relative;
+  z-index: 9;
+  pointer-events: auto;
+}
+
+.input-box {
+  display: flex;
+  align-items: center;
+  border-bottom: 2px solid #fff;
+  width: 23rem;
+}
+
+.input-box input {
+  flex: 1;
+  background: transparent;
+  border: none;
+  outline: none;
+  color: #fff;
+  padding: 8px;
+}
+
+.input-box i {
+  border: none;
+  cursor: pointer;
+  opacity: .5;
+}
+
+.top-right{
+    height: 82%;
+    width: 27%;
+    display: flex;
+    flex-shrink: 0;
+    gap: 5rem;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 1.6vw 2vw;
+}
+
+.top-right .text{
+    text-transform: capitalize;
+    width: fit-content;
+}
+
+.top-right .text h4{
+    font-family: "rejou";
+    font-size: .9rem;
+}
+
+.top-right .text:nth-child(1) h4{
+    font-family: "rejou";
+    font-size: .9rem;
+    margin-bottom: .4rem;
+}
+.top-right .text:nth-child(2) h4{
+    font-family: "rejou";
+    font-size: .9rem;
+    margin-bottom: .4rem;
+}
+
+.page8-bottom{
+    height: 56vh;
+    width: 100%;
+    color: #fff;
+    overflow: hidden;
+}
+
+.page8-bottom h1{
+    text-align: center;
+    font-size: 24.5vw;
+}
