--- a/style.css
+++ b/style.css
@@ -111,12 +111,45 @@ nav .nav-txt{
     font-size: .9vw;
 }
 
-nav > h4{
+.h4-txt{
+    position: relative;
+    height: 2.2vh;
+    width: 5rem;
+    display: inline-block;
     font-size: .9vw;
+    overflow: hidden;
+}
+
+.h4-txt::after   {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 1px;
+  width: 0;
+  background-color: white; 
+  transition: width 0.5s ease-out;
+}
+
+.h4-txt:hover::after {
+  width: 100%;
+}
+
+.h4-txt h4{
+    margin-left: -.6rem;
+    margin-bottom: .2rem;
+    transition: all ease-out 0.5s;
+    white-space: nowrap;
+}
+
+.h4-txt h4:hover{
+    margin-left: .3rem;
+    transition: all ease-out .5s;
 }
 
 
 #nav-center{
+    position: relative;
     width: 15vw;
     display: flex;
     align-items: center;
@@ -127,9 +160,29 @@ nav > h4{
     cursor: pointer;
 }
 
+#nav-center h4{
+    position: relative;
+    display: inline-block;
+}
+
 #nav-center h4:nth-child(1){
     font-family: "rejo";
     color: #404040;
+}
+
+#nav-center h4::after{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 1px;
+    width: 0;
+    background-color: white; 
+    transition: width 0.5s ease-out;
+}
+
+#nav-center h4:hover::after{
+    width: 100%;
 }
 
 .page2{
@@ -139,13 +192,46 @@ nav > h4{
 }
 
 .page2>h1{
-    position: absolute;
+    position: relative;
+    width: fit-content;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
     font-family: "rejouice";
     font-size: 4vw;
     color: #fff;
+}
+
+.page2>h1::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 1px;
+    background-color: white;
+    transition: width .5s ease-out;
+}
+
+.page2>h1:hover::after{
+    width: 100%;
+}
+
+.video-div{
+    height: 100vh;
+    width: 100%;
+    background-color: rgb(0, 0, 0);
+    padding: 2rem;
+    scale: 0;
+    position: fixed;
+    z-index: 99;
+    display: none;
+}
+
+.video-div .play-video{
+    /* display: none; */
+    height: 100%;
+    width: 100%;
 }
 
 .page2 video{
@@ -197,9 +283,25 @@ nav > h4{
 }
 
 .para .word3 p{
-    border-bottom: 3px solid #fff;
+    position: relative;
     cursor: pointer;
 }
+
+.para .word3 p::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 5%;
+    height: 1px;
+    background-color: white;
+    transition: width .5s ease-out;
+}
+
+.para .word3 p:hover::after{
+    width: 100%;
+}
+
 
 .para span{
     display: inline-block;
@@ -238,7 +340,7 @@ nav > h4{
 
 #right #btn{
     margin-top: 3vh;
-    width: 16%;
+    width: 16.5%;
     white-space: nowrap;
     overflow: hidden;
     border-bottom: 1px solid #fff;
@@ -247,6 +349,7 @@ nav > h4{
 #right #btn h4{
     font-size: 1.3vw;
     margin-left: -1vw;
+    transition: all ease .6s;
     cursor: pointer;
 }
 
