--- a/style.css
+++ b/style.css
@@ -96,6 +96,10 @@ nav{
     color: #ffffff;
 }
 
+nav button{
+    display: none;
+}
+
 nav .nav-txt{
     height: 2.5vh;
     width: 12rem;
@@ -104,7 +108,7 @@ nav .nav-txt{
 }
 
 .nav-txt h2{
-    font-size: .9vw; 
+    font-size: .95vw; 
 }
 
 .nav-txt h3{
@@ -580,6 +584,7 @@ nav .nav-txt{
     width: 100%;
     background-color: #fff;
     position: relative;
+    overflow: hidden;
 }
 
 .page5-top{
@@ -841,4 +846,43 @@ input {
     text-align: center;
     overflow: hidden;
     font-size: 24.5vw;
+}
+
+
+@media (max-width: 1000px) {
+    nav{
+    padding: 1.5rem .6rem;
+}
+
+nav .nav-txt{
+    height: 3vh;
+    text-align: left;
+}
+
+.nav-txt h2{
+    font-size: 1rem; 
+}
+
+.nav-txt h3{
+    font-size: 1rem;
+}
+
+.h4-txt{
+    display: none;
+}
+
+#nav-center{
+    display: none;
+}
+
+nav button{
+    display: block;
+    font-family: "rejo";
+    border: none;
+    background-color: #ffffff1f;
+    color: #fff;
+    font-weight: 400;
+    padding: .6rem 1.2rem;
+}
+
 }
