--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ html{
 .page1{
     height: 90vh;
     width: 100%;
-    background-color: pink;
+    /* background-color: pink; */
     position: relative;
 }
 
@@ -49,13 +49,8 @@ html{
     color: #fff;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
     flex-direction: column;
-}
-
-.page1-content i{
-    margin-left: 95vw;
-    margin-bottom: 4vh;
 }
 
 .page1-content h1{
@@ -65,20 +60,27 @@ html{
     margin-top: 2vh;
 }
 
-h1 span{
+.page1-content h1 span{
     display: inline-block;
 }
 
 #bottom{
+    width: 100%;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 2vw;
-    margin-right: 73vw;
-    margin-top: 7vh;
+    align-items: flex-end;
+    justify-content: space-between;
+    margin-bottom: 2rem;
+    padding: 0rem 2.5rem;
+}
+.h3-txxt{
+    width: 23%;
+    display: flex;
+    justify-content: space-between;
 }
 
-#bottom h3{
+
+#bottom  h3{
+    font-size: 1rem;
     font-family: "rejouice";
 }
 
@@ -883,6 +885,34 @@ nav button{
     color: #fff;
     font-weight: 400;
     padding: .6rem 1.2rem;
+}
+
+.page1-content{
+    justify-content: space-between;
+}
+
+.page1-content h1{
+    font-size: 26vw;
+    margin-top: 3rem;
+}
+
+#bottom{
+    align-items: flex-end;
+    padding: 0 .5rem;
+    margin-bottom: .7rem;
+}
+
+.h3-txxt{
+    width: 73%;
+}
+
+#bottom i{
+    font-size: 1.2rem;
+}
+
+#bottom h3{
+    font-size: 1rem;
+    font-family: "rejou";
 }
 
 }
