--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ nav{
     align-items: center;
     justify-content: space-between;
     padding: 2.5vw;
-    background-color: #000000;
+    background: #000000;
     text-transform: capitalize;
     font-family: "rejou";
     position: fixed;
@@ -1101,5 +1101,53 @@ nav button{
     overflow: hidden;
     object-fit: cover;
 }
+
+
+.page5-top{
+    height: 30vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 12vh 2vw;
+    gap: 6vw;
+    overflow: auto;
+}
+
+.page5-top::-webkit-scrollbar{
+    display: none;
+}
+
+.page5-top .images-div{
+    height: 7vh;
+    width: 30%;
+    background-color: red;
+    flex-shrink: 0;
+}
+
+.page5-top .images-div:nth-child(5){
+    height: 5vh;
+    width: 18%;
+}
+
+.page5-top .images-div:nth-child(4){
+    height: 5vh;
+    width: 20%;
+}
+
+.page5-top .images-div:nth-child(3){
+    height: 5vh;
+    width: 20%;
+}
+.page5-top .images-div:nth-child(2){
+    height: 5vh;
+    width: 20%;
+}
+
+.images-div img{
+    height: 100%;
+    width: 100%;
+}
+
 
 }
