--- a/style.css
+++ b/style.css
@@ -643,6 +643,10 @@ nav .nav-txt{
     width: 100%;
 }
 
+.page5-responsive{
+    display: none;
+}
+
 .page5-center{
     width: 96%;
     margin-left: 2%;
@@ -1104,49 +1108,34 @@ nav button{
 
 
 .page5-top{
-    height: 30vh;
+   display: none;
+}
+
+.page5-responsive{
+    display: block;
+    height: 28vh;
     width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 12vh 2vw;
-    gap: 6vw;
-    overflow: auto;
+    padding-top: 10vh;
 }
 
-.page5-top::-webkit-scrollbar{
-    display: none;
+.moving-div {
+  display: flex;
+  width: max-content;
+  gap: 10vw;
 }
 
-.page5-top .images-div{
-    height: 7vh;
-    width: 30%;
-    background-color: red;
-    flex-shrink: 0;
+.marque {
+  display: flex;
+  align-items: center;
+  gap: 14vw;
 }
 
-.page5-top .images-div:nth-child(5){
-    height: 5vh;
-    width: 18%;
+.marque img {
+  height: 7vw;
+  width: auto;
 }
-
-.page5-top .images-div:nth-child(4){
-    height: 5vh;
-    width: 20%;
-}
-
-.page5-top .images-div:nth-child(3){
-    height: 5vh;
-    width: 20%;
-}
-.page5-top .images-div:nth-child(2){
-    height: 5vh;
-    width: 20%;
-}
-
-.images-div img{
-    height: 100%;
-    width: 100%;
+.marque img:nth-child(1){
+    height: 7vw;
 }
 
 
