--- a/style.css
+++ b/style.css
@@ -693,6 +693,10 @@ nav .nav-txt{
     margin-right: auto;
 }
 
+.swiper-div2{
+    display: none;
+}
+
 .page6{
     min-height: 100vh;
     width: 100%;
@@ -1138,5 +1142,52 @@ nav button{
     height: 7vw;
 }
 
+.page5-center h2{
+    font-family: "rejou";
+    font-weight: 100;
+    font-size: 4.1vw;
+}
+
+.swiper-div{
+    display: none;
+}
+
+.swiper-div2{
+    display: block;
+    width: 100%;
+    height: 58.1vh;
+    position: relative;
+    cursor:-webkit-grab;
+}
+
+.swiper2{
+    background-color: darkblue;
+    width: 100%;
+    height: 100%;
+}
+
+:root {
+  --swiper-wrapper-transition-timing-function: linear;
+}
+
+.swiper-slide {
+    background-color: darkcyan;
+    width: 69vw !important;
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    object-fit: cover;
+}
+
+.swiper2 {
+    margin-left: auto;
+    margin-right: auto;
+}
 
 }
