--- a/style.css
+++ b/style.css
@@ -798,7 +798,9 @@ nav .nav-txt{
     color: #fff;
     padding: 2vw 2.5vw;
 }
-
+.page8-up{
+    display: none;
+}
 .page8-top{
     height: 37vh;
     width: 100%;
@@ -1021,7 +1023,7 @@ nav button{
 
 .page3 .content{
     margin-top: 4vh;
-    height: 35vh;
+    height: 70vw;
 }
 
 .page3 .content h3{
@@ -1208,7 +1210,6 @@ nav button{
 
 .page6-content:nth-child(3){
     height: 38vh;
-    border-bottom: 1px solid #4444;
     padding: 2vh 1vw;
 }
 
@@ -1227,9 +1228,89 @@ nav button{
 
 .page6-cont{
     margin-top: 3vh;
-    height: 35vh;
+    width: 100%;
+    height: 60vw;
     padding: 0vw 1vw;
 }
 
+.page7{
+    height: 50vh;
+}
+
+.page7-center{
+    width: 70vw;
+    height: 6vh;
+}
+
+.page7-center h2{
+    font-size: 2rem;
+}
+
+.page7-center h3{
+    font-size: 2rem;
+}
+
+.page8{
+    height: 100vh;
+}
+
+.page8-top{
+    display: none;
+}
+
+.page8-up{
+    position: relative;
+    display: block;
+    height: 73vh;
+    width: 100%;
+}
+
+.up-top{
+    height: 30vh;
+    width: 100%;
+    display: flex;
+}
+
+.up-left{
+    width: 60%;
+    height: 100%;
+}
+.up-left h1{
+    font-family: "rejouice";
+    text-transform: capitalize;
+}
+
+.up-right h4{
+    font-size: 1rem;
+    margin-bottom: 1vh;
+}
+
+.up-right h5{
+    font-size: 1rem;
+    margin-top: 7vh;
+}
+
+.page8-center{
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+}
+
+.page8-center h3{
+    font-size: 1rem;
+    width: 50%;
+}
+
+.input-box {
+  width: 100%;
+}
+
+.page8-bottom{
+    height: 25vh;
+}
+.page8-bottom h1{
+    font-size: 24vw;
+    margin-top: -2vh;
+}
 
 }
