--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ nav{
     display: none;
 }
 
-nav button{
+nav #menu-btn{
     display: none;
 }
 
@@ -902,10 +902,18 @@ input {
     font-size: 24.5vw;
 }
 
+.loader{
+    height: 100vh;
+    width: 100%;
+    background-color: #fff;
+    position: fixed;
+    top: 0;
+    z-index: 50;
+}
 
 @media (max-width: 1100px) {
     nav{
-    padding: 1.5rem .6rem;
+    padding: 1rem .6rem;
     z-index: 99;
     background-color: #000;
 }
@@ -934,24 +942,24 @@ nav .nav-txt{
 
 nav #menu-btn{
     padding-top: 1vh;
-    height: 5vh;
+    height: calc(2vh + 1.5rem);
     width: 18vw;
-    background-color: #ffffff9e;
+    background-color: #b6b2b23d;
     display: flex;
     align-items: center;
-    gap: 0vh;
+    gap: 1vh;
     flex-direction: column;
+    overflow: hidden;
 }
 
 #menu-btn h4{
-    font-size: 4vw;
+    font-size: calc(1vw + 2vh);
+    transition: all linear .5s;
 }
 
 #menu-btn h5{
-    font-size: 4vw;
-}
-.page1-content{
-    justify-content: space-between;
+    font-size: calc(1vw + 2vh);
+    transition: all linear .5s;
 }
 
 .page1-content h1{
@@ -1326,12 +1334,13 @@ nav #menu-btn{
 
 .menu-div{
     display: block;
-    height: 90vh;
+    height: 100vh;
     width: 100%;
     background-color: #000;
     color: #fff;
     position: fixed;
     top: -100vh;
+    padding-top: 10vh;
     left: 0;
     z-index: 20;
 }
